// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with some financial sources data 1`] = `
<React.Fragment>
  <ForwardRef(render)>
    Income and Asset Verification
  </ForwardRef(render)>
  <ForwardRef(render)>
    Add at least one income source or asset below.
  </ForwardRef(render)>
  <GenericFormDetail
    messages={
      Array [
        "Oops! We found some issues with one or more of your income/assets sources.",
      ]
    }
    type="error"
  />
  <Capsule
    buttonLabel="Add an Income Source"
    expansionPanel={
      <React.Fragment>
        <div
          className="css-19cyq23"
        >
          <div
            className="css-mt9voc"
          >
            $100,000
             Total Annual Income
          </div>
          <p
            className="css-1pqho16"
          >
            $40,000
             is the recommended household income.
            <SimplePopover
              text="It’s recommended that the yearly combined income of all applicants be 40x the monthly rent."
            >
              <UNDEFINED
                classes={
                  Object {
                    "root": "css-bmph1p",
                  }
                }
                style={
                  Object {
                    "color": "#828796",
                    "width": 16,
                  }
                }
              />
            </SimplePopover>
          </p>
        </div>
        <ExistingItemsExpansionPanel
          defaultExpanded={false}
          label="Income Source"
          labelQuantity={5}
        >
          <div>
            <IncomeOrAssetItemWarning
              isAsset={false}
              source={
                Object {
                  "estimated_amount": 100000,
                  "id": 123,
                  "income_or_asset_type": 105,
                  "uploaded_documents": Array [
                    Object {
                      "filename": "w2-1.pdf",
                      "id": 4,
                      "type": Object {
                        "id": 1,
                        "label": "W2",
                      },
                    },
                  ],
                }
              }
            />
            <div>
              Employment
            </div>
            <div
              className="css-dufvih"
            >
              $100,000
              /year
            </div>
            <div
              className="css-dufvih"
            >
              Proof of income: 
              W2
            </div>
            <React.Fragment>
              <ForwardRef(render)
                height={10}
              />
              <ForwardRef
                style={
                  Object {
                    "fontSize": 14,
                    "textDecoration": "underline",
                  }
                }
                to="/income-employment/manual/financial-sources/123/edit"
              >
                Edit
              </ForwardRef>
                    
              <ForwardRef
                style={
                  Object {
                    "fontSize": 14,
                    "textDecoration": "underline",
                  }
                }
                to="/income-employment/manual/financial-sources/123/remove"
              >
                Remove
              </ForwardRef>
            </React.Fragment>
          </div>
          <div>
            <IncomeOrAssetItemWarning
              isAsset={false}
              source={
                Object {
                  "estimated_amount": 100000,
                  "id": 124,
                  "income_or_asset_type": 135,
                  "uploaded_documents": Array [],
                }
              }
            />
            <div />
            <div
              className="css-dufvih"
            >
              $100,000
              /year
            </div>
            <div
              className="css-dufvih"
            >
              Proof of income: 
              Linked bank account
            </div>
          </div>
          <div>
            <IncomeOrAssetItemWarning
              isAsset={false}
              source={
                Object {
                  "estimated_amount": 100000,
                  "id": 125,
                  "income_or_asset_type": 500,
                  "uploaded_documents": Array [
                    Object {
                      "filename": "w2-1.pdf",
                      "id": 1,
                      "type": Object {
                        "id": 1,
                        "label": "W2",
                      },
                    },
                    Object {
                      "filename": "w2-2.pdf",
                      "id": 2,
                      "type": Object {
                        "id": 1,
                        "label": "W2",
                      },
                    },
                    Object {
                      "filename": "w3.pdf",
                      "id": 3,
                      "type": Object {
                        "id": 2,
                        "label": "W3",
                      },
                    },
                  ],
                }
              }
            />
            <div>
              Savings
            </div>
            <div
              className="css-dufvih"
            >
              $100,000
              /year
            </div>
            <div
              className="css-dufvih"
            >
              Proof of income: 
              W2, W3
            </div>
            <React.Fragment>
              <ForwardRef(render)
                height={10}
              />
              <ForwardRef
                style={
                  Object {
                    "fontSize": 14,
                    "textDecoration": "underline",
                  }
                }
                to="/income-employment/manual/financial-sources/125/edit"
              >
                Edit
              </ForwardRef>
                    
              <ForwardRef
                style={
                  Object {
                    "fontSize": 14,
                    "textDecoration": "underline",
                  }
                }
                to="/income-employment/manual/financial-sources/125/remove"
              >
                Remove
              </ForwardRef>
            </React.Fragment>
          </div>
          <div>
            <IncomeOrAssetItemWarning
              isAsset={false}
              source={
                Object {
                  "adjusted_amount": 100020,
                  "estimated_amount": 100000,
                  "id": 124,
                  "income_or_asset_type": 135,
                  "status": 40,
                  "uploaded_documents": Array [],
                }
              }
            />
            <div />
            <div
              className="css-dufvih"
            >
              $100,000
              /year
            </div>
            <div
              className="css-dufvih"
            >
              Proof of income: 
              Linked bank account
            </div>
          </div>
          <div>
            <IncomeOrAssetItemWarning
              isAsset={false}
              source={
                Object {
                  "adjusted_amount": null,
                  "estimated_amount": 100000,
                  "id": 124,
                  "income_or_asset_type": 135,
                  "status": 40,
                  "uploaded_documents": Array [],
                }
              }
            />
            <div />
            <div
              className="css-dufvih"
            >
              $100,000
              /year
            </div>
            <div
              className="css-dufvih"
            >
              Proof of income: 
              Linked bank account
            </div>
          </div>
        </ExistingItemsExpansionPanel>
      </React.Fragment>
    }
    label="Income"
    limitReached={false}
    name="income"
    prefix={
      <img
        alt="coin"
        src="finance.png"
      />
    }
    route="/income-employment/manual/add-income"
    tip="TBD"
  />
  <Capsule
    buttonLabel="Add an Asset"
    expansionPanel={
      <React.Fragment>
        <div
          className="css-19cyq23"
        >
          <div
            className="css-mt9voc"
          >
            $40,000
             Total Asset Balance
          </div>
          <p
            className="css-1pqho16"
          >
            We’ll take this number into consideration in addition to or in place of income.
          </p>
        </div>
        <ExistingItemsExpansionPanel
          defaultExpanded={false}
          label="Asset"
          labelQuantity={3}
        >
          <div>
            <IncomeOrAssetItemWarning
              isAsset={true}
              source={
                Object {
                  "estimated_amount": 40000,
                  "id": 125,
                  "income_or_asset_type": 510,
                  "uploaded_documents": Array [],
                }
              }
            />
            <div>
              Investment
            </div>
            <div
              className="css-dufvih"
            >
              $40,000
            </div>
            <div
              className="css-dufvih"
            >
              Proof of asset: 
              None
            </div>
            <React.Fragment>
              <ForwardRef(render)
                height={10}
              />
              <ForwardRef
                style={
                  Object {
                    "fontSize": 14,
                    "textDecoration": "underline",
                  }
                }
                to="/income-employment/manual/financial-sources/125/edit"
              >
                Edit
              </ForwardRef>
                    
              <ForwardRef
                style={
                  Object {
                    "fontSize": 14,
                    "textDecoration": "underline",
                  }
                }
                to="/income-employment/manual/financial-sources/125/remove"
              >
                Remove
              </ForwardRef>
            </React.Fragment>
          </div>
          <div>
            <IncomeOrAssetItemWarning
              isAsset={true}
              source={
                Object {
                  "adjusted_amount": 40020,
                  "estimated_amount": 40000,
                  "id": 125,
                  "income_or_asset_type": 510,
                  "status": 40,
                  "uploaded_documents": Array [],
                }
              }
            />
            <div>
              Investment
            </div>
            <div
              className="css-dufvih"
            >
              $40,000
            </div>
            <div
              className="css-dufvih"
            >
              Proof of asset: 
              None
            </div>
            <React.Fragment>
              <ForwardRef(render)
                height={10}
              />
              <ForwardRef
                style={
                  Object {
                    "fontSize": 14,
                    "textDecoration": "underline",
                  }
                }
                to="/income-employment/manual/financial-sources/125/edit"
              >
                Edit
              </ForwardRef>
                    
              <ForwardRef
                style={
                  Object {
                    "fontSize": 14,
                    "textDecoration": "underline",
                  }
                }
                to="/income-employment/manual/financial-sources/125/remove"
              >
                Remove
              </ForwardRef>
            </React.Fragment>
          </div>
          <div>
            <IncomeOrAssetItemWarning
              isAsset={true}
              source={
                Object {
                  "adjusted_amount": null,
                  "estimated_amount": 40000,
                  "id": 125,
                  "income_or_asset_type": 510,
                  "status": 40,
                  "uploaded_documents": Array [],
                }
              }
            />
            <div>
              Investment
            </div>
            <div
              className="css-dufvih"
            >
              $40,000
            </div>
            <div
              className="css-dufvih"
            >
              Proof of asset: 
              None
            </div>
            <React.Fragment>
              <ForwardRef(render)
                height={10}
              />
              <ForwardRef
                style={
                  Object {
                    "fontSize": 14,
                    "textDecoration": "underline",
                  }
                }
                to="/income-employment/manual/financial-sources/125/edit"
              >
                Edit
              </ForwardRef>
                    
              <ForwardRef
                style={
                  Object {
                    "fontSize": 14,
                    "textDecoration": "underline",
                  }
                }
                to="/income-employment/manual/financial-sources/125/remove"
              >
                Remove
              </ForwardRef>
            </React.Fragment>
          </div>
        </ExistingItemsExpansionPanel>
      </React.Fragment>
    }
    label="Assets"
    limitReached={false}
    name="asset"
    prefix={
      <img
        alt="piggy bank"
        src="piggy-bank.png"
      />
    }
    route="/income-employment/manual/add-asset"
    tip="TBD"
  />
  <ActionButton
    color="primary"
    disabled={false}
    marginBottom={20}
    marginTop={68}
    onClick={[Function]}
    successGreen={false}
    variant="contained"
  >
    Continue
  </ActionButton>
  <ForwardRef(WithStyles)
    classes={
      Object {
        "root": "css-rf9gj",
      }
    }
    color="primary"
    onClick={[Function]}
  >
    Start Income Verification Over
  </ForwardRef(WithStyles)>
</React.Fragment>
`;

exports[`matches snapshot with some financial sources data if guarantor 1`] = `
<React.Fragment>
  <ForwardRef(render)>
    Income and Asset Verification
  </ForwardRef(render)>
  <ForwardRef(render)>
    Add at least one income source or asset below.
  </ForwardRef(render)>
  <GenericFormDetail
    messages={
      Array [
        "Oops! We found some issues with one or more of your income/assets sources.",
      ]
    }
    type="error"
  />
  <Capsule
    buttonLabel="Add an Income Source"
    expansionPanel={
      <React.Fragment>
        <div
          className="css-19cyq23"
        >
          <div
            className="css-mt9voc"
          >
            $100,000
             Total Annual Income
          </div>
          <p
            className="css-1pqho16"
          >
            $80,000
             is the required income for guarantors.
            <SimplePopover
              text="The required income for a guarantor is 80x the monthly rent"
            >
              <UNDEFINED
                classes={
                  Object {
                    "root": "css-bmph1p",
                  }
                }
                style={
                  Object {
                    "color": "#828796",
                    "width": 16,
                  }
                }
              />
            </SimplePopover>
          </p>
        </div>
        <ExistingItemsExpansionPanel
          defaultExpanded={false}
          label="Income Source"
          labelQuantity={5}
        >
          <div>
            <IncomeOrAssetItemWarning
              isAsset={false}
              source={
                Object {
                  "estimated_amount": 100000,
                  "id": 123,
                  "income_or_asset_type": 105,
                  "uploaded_documents": Array [
                    Object {
                      "filename": "w2-1.pdf",
                      "id": 4,
                      "type": Object {
                        "id": 1,
                        "label": "W2",
                      },
                    },
                  ],
                }
              }
            />
            <div>
              Employment
            </div>
            <div
              className="css-dufvih"
            >
              $100,000
              /year
            </div>
            <div
              className="css-dufvih"
            >
              Proof of income: 
              W2
            </div>
            <React.Fragment>
              <ForwardRef(render)
                height={10}
              />
              <ForwardRef
                style={
                  Object {
                    "fontSize": 14,
                    "textDecoration": "underline",
                  }
                }
                to="/income-employment/manual/financial-sources/123/edit"
              >
                Edit
              </ForwardRef>
                    
              <ForwardRef
                style={
                  Object {
                    "fontSize": 14,
                    "textDecoration": "underline",
                  }
                }
                to="/income-employment/manual/financial-sources/123/remove"
              >
                Remove
              </ForwardRef>
            </React.Fragment>
          </div>
          <div>
            <IncomeOrAssetItemWarning
              isAsset={false}
              source={
                Object {
                  "estimated_amount": 100000,
                  "id": 124,
                  "income_or_asset_type": 135,
                  "uploaded_documents": Array [],
                }
              }
            />
            <div />
            <div
              className="css-dufvih"
            >
              $100,000
              /year
            </div>
            <div
              className="css-dufvih"
            >
              Proof of income: 
              Linked bank account
            </div>
          </div>
          <div>
            <IncomeOrAssetItemWarning
              isAsset={false}
              source={
                Object {
                  "estimated_amount": 100000,
                  "id": 125,
                  "income_or_asset_type": 500,
                  "uploaded_documents": Array [
                    Object {
                      "filename": "w2-1.pdf",
                      "id": 1,
                      "type": Object {
                        "id": 1,
                        "label": "W2",
                      },
                    },
                    Object {
                      "filename": "w2-2.pdf",
                      "id": 2,
                      "type": Object {
                        "id": 1,
                        "label": "W2",
                      },
                    },
                    Object {
                      "filename": "w3.pdf",
                      "id": 3,
                      "type": Object {
                        "id": 2,
                        "label": "W3",
                      },
                    },
                  ],
                }
              }
            />
            <div>
              Savings
            </div>
            <div
              className="css-dufvih"
            >
              $100,000
              /year
            </div>
            <div
              className="css-dufvih"
            >
              Proof of income: 
              W2, W3
            </div>
            <React.Fragment>
              <ForwardRef(render)
                height={10}
              />
              <ForwardRef
                style={
                  Object {
                    "fontSize": 14,
                    "textDecoration": "underline",
                  }
                }
                to="/income-employment/manual/financial-sources/125/edit"
              >
                Edit
              </ForwardRef>
                    
              <ForwardRef
                style={
                  Object {
                    "fontSize": 14,
                    "textDecoration": "underline",
                  }
                }
                to="/income-employment/manual/financial-sources/125/remove"
              >
                Remove
              </ForwardRef>
            </React.Fragment>
          </div>
          <div>
            <IncomeOrAssetItemWarning
              isAsset={false}
              source={
                Object {
                  "adjusted_amount": 100020,
                  "estimated_amount": 100000,
                  "id": 124,
                  "income_or_asset_type": 135,
                  "status": 40,
                  "uploaded_documents": Array [],
                }
              }
            />
            <div />
            <div
              className="css-dufvih"
            >
              $100,000
              /year
            </div>
            <div
              className="css-dufvih"
            >
              Proof of income: 
              Linked bank account
            </div>
          </div>
          <div>
            <IncomeOrAssetItemWarning
              isAsset={false}
              source={
                Object {
                  "adjusted_amount": null,
                  "estimated_amount": 100000,
                  "id": 124,
                  "income_or_asset_type": 135,
                  "status": 40,
                  "uploaded_documents": Array [],
                }
              }
            />
            <div />
            <div
              className="css-dufvih"
            >
              $100,000
              /year
            </div>
            <div
              className="css-dufvih"
            >
              Proof of income: 
              Linked bank account
            </div>
          </div>
        </ExistingItemsExpansionPanel>
      </React.Fragment>
    }
    label="Income"
    limitReached={false}
    name="income"
    prefix={
      <img
        alt="coin"
        src="finance.png"
      />
    }
    route="/income-employment/manual/add-income"
    tip="TBD"
  />
  <Capsule
    buttonLabel="Add an Asset"
    expansionPanel={
      <React.Fragment>
        <div
          className="css-19cyq23"
        >
          <div
            className="css-mt9voc"
          >
            $40,000
             Total Asset Balance
          </div>
          <p
            className="css-1pqho16"
          >
            We’ll take this number into consideration in addition to or in place of income.
          </p>
        </div>
        <ExistingItemsExpansionPanel
          defaultExpanded={false}
          label="Asset"
          labelQuantity={3}
        >
          <div>
            <IncomeOrAssetItemWarning
              isAsset={true}
              source={
                Object {
                  "estimated_amount": 40000,
                  "id": 125,
                  "income_or_asset_type": 510,
                  "uploaded_documents": Array [],
                }
              }
            />
            <div>
              Investment
            </div>
            <div
              className="css-dufvih"
            >
              $40,000
            </div>
            <div
              className="css-dufvih"
            >
              Proof of asset: 
              None
            </div>
            <React.Fragment>
              <ForwardRef(render)
                height={10}
              />
              <ForwardRef
                style={
                  Object {
                    "fontSize": 14,
                    "textDecoration": "underline",
                  }
                }
                to="/income-employment/manual/financial-sources/125/edit"
              >
                Edit
              </ForwardRef>
                    
              <ForwardRef
                style={
                  Object {
                    "fontSize": 14,
                    "textDecoration": "underline",
                  }
                }
                to="/income-employment/manual/financial-sources/125/remove"
              >
                Remove
              </ForwardRef>
            </React.Fragment>
          </div>
          <div>
            <IncomeOrAssetItemWarning
              isAsset={true}
              source={
                Object {
                  "adjusted_amount": 40020,
                  "estimated_amount": 40000,
                  "id": 125,
                  "income_or_asset_type": 510,
                  "status": 40,
                  "uploaded_documents": Array [],
                }
              }
            />
            <div>
              Investment
            </div>
            <div
              className="css-dufvih"
            >
              $40,000
            </div>
            <div
              className="css-dufvih"
            >
              Proof of asset: 
              None
            </div>
            <React.Fragment>
              <ForwardRef(render)
                height={10}
              />
              <ForwardRef
                style={
                  Object {
                    "fontSize": 14,
                    "textDecoration": "underline",
                  }
                }
                to="/income-employment/manual/financial-sources/125/edit"
              >
                Edit
              </ForwardRef>
                    
              <ForwardRef
                style={
                  Object {
                    "fontSize": 14,
                    "textDecoration": "underline",
                  }
                }
                to="/income-employment/manual/financial-sources/125/remove"
              >
                Remove
              </ForwardRef>
            </React.Fragment>
          </div>
          <div>
            <IncomeOrAssetItemWarning
              isAsset={true}
              source={
                Object {
                  "adjusted_amount": null,
                  "estimated_amount": 40000,
                  "id": 125,
                  "income_or_asset_type": 510,
                  "status": 40,
                  "uploaded_documents": Array [],
                }
              }
            />
            <div>
              Investment
            </div>
            <div
              className="css-dufvih"
            >
              $40,000
            </div>
            <div
              className="css-dufvih"
            >
              Proof of asset: 
              None
            </div>
            <React.Fragment>
              <ForwardRef(render)
                height={10}
              />
              <ForwardRef
                style={
                  Object {
                    "fontSize": 14,
                    "textDecoration": "underline",
                  }
                }
                to="/income-employment/manual/financial-sources/125/edit"
              >
                Edit
              </ForwardRef>
                    
              <ForwardRef
                style={
                  Object {
                    "fontSize": 14,
                    "textDecoration": "underline",
                  }
                }
                to="/income-employment/manual/financial-sources/125/remove"
              >
                Remove
              </ForwardRef>
            </React.Fragment>
          </div>
        </ExistingItemsExpansionPanel>
      </React.Fragment>
    }
    label="Assets"
    limitReached={false}
    name="asset"
    prefix={
      <img
        alt="piggy bank"
        src="piggy-bank.png"
      />
    }
    route="/income-employment/manual/add-asset"
    tip="TBD"
  />
  <ActionButton
    color="primary"
    disabled={false}
    marginBottom={20}
    marginTop={68}
    onClick={[Function]}
    successGreen={false}
    variant="contained"
  >
    Continue
  </ActionButton>
  <ForwardRef(WithStyles)
    classes={
      Object {
        "root": "css-rf9gj",
      }
    }
    color="primary"
    onClick={[Function]}
  >
    Start Income Verification Over
  </ForwardRef(WithStyles)>
</React.Fragment>
`;
